samples/_failures_safe/1761194989_768071_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_63f52d58.c: In function ‘main’:
./samples/SAFE/__tmp_63f52d58.c:157:16: error: missing terminating " character
  157 |         printf("Error
      |                ^~~~~~
./samples/SAFE/__tmp_63f52d58.c:157:9: error: expected expression at end of input
  157 |         printf("Error
      |         ^~~~~~
./samples/SAFE/__tmp_63f52d58.c:157:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_63f52d58.c:157:9: error: expected declaration or statement at end of input
